[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "denstatbank"
version = "0.8.0"
authors = [
  { name="Gopakumar Mohandas", email="gopakumarmohandas@gmail.com" },
]
description = "A Python API wrapper to Statistics Denmark's DataBank API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pytest",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/gmohandas/denstatbank"
"Bug Tracker" = "https://github.com/gmohandas/denstatbank/issues"